@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+04/12/2016 16:20 - Admin page is now available in menubar for logged-in admin users
 04/12/2016 15:34 - Avatar properly appears when logged in
 04/12/2016 14:11 - modified transactions model to convert date properly
 04/12/2016 14:10 - Initial card buy component
